# workshops_luciano

./: README.md  pyproject.toml
.github/workflows/: ci.yml
00_projeto_e_processos_de_dados/data/: correto.xlsx
00_projeto_e_processos_de_dados/src/: app.py  backend.py  frontend.py  minha_funcionalidade.py
00_projeto_e_processos_de_dados/tests/: test_contrato.py  test_funcional.py
